# assimp

./: CMakeLists.txt
code/: 3DXMLImporter.cpp  3DXMLImporter.h  3DXMLLoader.cpp  3DXMLLoader.h  3DXMLMaterial.cpp  3DXMLMaterial.h  3DXMLParser.cpp  3DXMLParser.h  3DXMLRepresentation.cpp  3DXMLRepresentation.h  3DXMLStructure.cpp  3DXMLStructure.h  AssimpPCH.cpp  BaseImporter.cpp  BaseImporter.h  CMakeLists.txt  ColladaExporter.cpp  D3MFImporter.cpp  HighResProfiler.cpp  HighResProfiler.h  ImporterRegistry.cpp  Optional.cpp  Optional.h  SceneCombiner.cpp  SceneCombiner.h  ValidateDataStructure.cpp  Version.cpp  XMLParser.cpp  XMLParser.h  scene.cpp
code/3DXML/: 3DXMLImporter.h  3DXMLMaterial.cpp  3DXMLParser.h  3DXMLRepresentation.cpp  3DXMLStructure.cpp  Optional.h  XMLParser.h
code/3MF/: D3MFImporter.cpp
code/Common/: ImporterRegistry.cpp  SceneCombiner.cpp  Version.cpp  scene.cpp
code/Importer/STEPParser/: STEPFileReader.cpp
code/PostProcessing/: ValidateDataStructure.cpp
contrib/zlib/: CMakeLists.txt
include/assimp/: Array.hpp  BaseImporter.h  SceneCombiner.h  anim.h  config.h  config.h.in  mesh.h  metadata.h  scene.h
port/Assimp.NET/: Assimp.NET.sln
port/Assimp.NET/Assimp.NET/: Assimp.NET.vcxproj  Assimp.NET.vcxproj.filters  AssimpSwigPort.i  AssimpSwigPort_wrap.cxx
port/Assimp.NET/Assimp.NET_CS/: Assimp.NET_CS.csproj  Assimp.cs  AssimpPINVOKE.cs  FloatVector.cs  Importer.cs  ProgressHandler.cs  SWIGTYPE_p_Assimp__BaseImporter.cs  SWIGTYPE_p_Assimp__ImporterPimpl.cs  aiBone.cs  (+73 more)
port/csharp/: CMakeLists.txt  assimp_cs.csproj.template  assimp_swig.i
(+3 files in other folders)
